<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Copyright © 2021 92AK
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>com.ntak</groupId>
        <artifactId>pearl-zip</artifactId>
        <version>0.0.0.2</version>
    </parent>

    <artifactId>pearl-zip-archive</artifactId>
    <name>PearlZip Archive Logic</name>
    <packaging>jar</packaging>

    <distributionManagement>
        <repository>
            <id>github</id>
            <name>GitHub Pearl Zip Apache Maven Packages</name>
            <url>https://maven.pkg.github.com/aashutos/pearl-zip</url>
        </repository>
    </distributionManagement>

    <properties>
        <maven.compiler.source>15</maven.compiler.source>
        <maven.compiler.target>15</maven.compiler.target>
        <pearlzip.sign.store.password>SET STORE PASSWORD</pearlzip.sign.store.password>
        <pearlzip.sign.key.password>SET KEY PASSWORD</pearlzip.sign.key.password>
        <maven.deploy.skip>true</maven.deploy.skip>
        <deploy.settings.loc>${project.basedir}/scripts/settings.properties</deploy.settings.loc>
    </properties>

    <licenses>
        <license>
            <name>BSD 3-Clause</name>
            <url>http://opensource.org/licenses/BSD-3-Clause</url>
        </license>
    </licenses>

    <dependencies>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-graphics</artifactId>
            <version>${javafx.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-base</artifactId>
            <version>${javafx.version}</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>

    <profiles>
        <profile>
            <id>increment-version</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>com.google.code.maven-replacer-plugin</groupId>
                        <artifactId>replacer</artifactId>
                        <version>1.5.3</version>
                        <executions>
                            <execution>
                                <id>version-set</id>
                                <phase>validate</phase>
                                <goals>
                                    <goal>replace</goal>
                                </goals>
                                <configuration>
                                    <includes>
                                        <include>${project.basedir}/pom.xml</include>
                                    </includes>
                                    <replacements>
                                        <replacement>
                                            <token>${project.version}</token>
                                            <value>${pearlzip.next.version}</value>
                                        </replacement>
                                    </replacements>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>sign-pz-lib</id>
            <properties>
                <maven.deploy.skip>false</maven.deploy.skip>
            </properties>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>exec-maven-plugin</artifactId>
                        <version>1.6.0</version>
                        <executions>
                            <execution>
                                <id>sign-lib</id>
                                <phase>pre-integration-test</phase>
                                <goals>
                                    <goal>exec</goal>
                                </goals>
                                <configuration>
                                    <executable>sh</executable>
                                    <arguments>
                                        <argument>${project.basedir}/scripts/sign-lib.sh</argument>
                                        <argument>${project.version}</argument>
                                    </arguments>
                                    <environmentVariables>
                                        <JAVA_HOME>${jdk.location}</JAVA_HOME>
                                    </environmentVariables>
                                    <async>false</async>
                                </configuration>
                            </execution>
                            <execution>
                                <id>clean-mvn-package</id>
                                <phase>clean</phase>
                                <goals>
                                    <goal>exec</goal>
                                </goals>
                                <configuration>
                                    <executable>sh</executable>
                                    <arguments>
                                        <argument>${project.basedir}/scripts/clear-mvn-package.sh</argument>
                                        <argument>${project.version}</argument>
                                        <argument>${deploy.settings.loc}</argument>
                                    </arguments>
                                    <environmentVariables>
                                        <JAVA_HOME>${jdk.location}</JAVA_HOME>
                                    </environmentVariables>
                                    <async>false</async>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

   <build>
       <plugins>
           <plugin>
               <groupId>org.apache.maven.plugins</groupId>
               <artifactId>maven-compiler-plugin</artifactId>
               <version>3.8.1</version>
               <configuration>
                   <source>15</source>
                   <target>15</target>
                   <compilerArgs>--enable-preview</compilerArgs>
               </configuration>
           </plugin>
       </plugins>
   </build>
</project>
